GearsetPOC/force-app/main/default/objects/Metafour_Station_Addresses__mdt/Metafour_Station_Addresses__mdt.object-meta.xml
<CustomObject>
    <label>Metafour_Station_Addresses</label>
    <pluralLabel>Metafour_Station_Addresses</pluralLabel>
</CustomObject>