GearsetPOC/force-app/main/default/objects/Metafour_Station_Addresses__mdt/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>