GearsetPOC/force-app/main/default/objects/Metafour_Station_Addresses__mdt/fields/Place_Name__c.field-meta.xml
<CustomField>
    <fullName>Place_Name__c</fullName>
    <label>Place Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>