GearsetPOC/force-app/main/default/objects/Metafour_Station_Addresses__mdt/fields/Station_Name__c.field-meta.xml
<CustomField>
    <fullName>Station_Name__c</fullName>
    <label>Station Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>